--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.24)
 project(MyMatrix)
 
+cmake_minimum_required(VERSION 3.24)
+project(MyMatrix CXX)
+
 set(CMAKE_CXX_STANDARD 17)
 if(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8 /arch:AVX2 /Qpar /Qpar-report:1")
@@ -9,6 +12,9 @@ if(MSVC)
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mfma")
 endif()
+
+include(cython.cmake)
+find_package(Python3 REQUIRED COMPONENTS Interpreter Development.Module NumPy)
 
 option(BUILD_GMOCK OFF)
 include(FetchContent)
@@ -40,7 +46,14 @@ enable_testing()
 include(GoogleTest)
 gtest_discover_tests(MyMatrix-tests)
 
+
 add_executable(MyMatrix-bench MyMatrix-bench.cpp)
 target_link_libraries(MyMatrix-bench PRIVATE nanobench MyMatrix)
 
-include(cython.cmake)
+
+Cython_add_library(MyMatrixWrapper 
+    ${CMAKE_CURRENT_SOURCE_DIR}/MyMatrixWrapper.pyx
+    ${CMAKE_CURRENT_SOURCE_DIR}/MyMatrixWrapper.pxd
+)
+Link_numpy(MyMatrixWrapper)
+target_link_libraries(MyMatrixWrapper PRIVATE MyMatrix)
