卷积测速代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ project(MyMatrix CXX)
 set(CMAKE_CXX_STANDARD 17)
 if(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8 /arch:AVX2 /Qpar /Qpar-report:1")
-    add_link_options(/LTCG)
+    # add_link_options(/LTCG)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS false)
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mfma")
