--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pip_conf_index_global"
 [packages]
 numpy = "*"
 cython = ">=3.0"
+jupyter = "*"
+torch = "*"
+pillow = "*"
 
 [dev-packages]
 
